access-logging.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: access-log
  namespace: zis-actions-salesforce
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: ANY
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
    patch:
      operation: MERGE
      value:
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          access_log:
          - name: envoy.file_access_log_dummy
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              format: typed_json_format
              path: /dev/stdout
              typed_json_format:
                authority: '%REQ(:AUTHORITY)%'
                bytes_rcvd: '%BYTES_RECEIVED%'
                bytes_sent: '%BYTES_SENT%'
                downstream_local_address: '%DOWNSTREAM_LOCAL_ADDRESS%'
                downstream_remote_address: '%DOWNSTREAM_REMOTE_ADDRESS%'
                duration: '%DURATION%'
                method: '%REQ(:METHOD)%'
                path: '%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%'
                protocol: '%PROTOCOL%'
                request_id: '%REQ(X-REQUEST-ID)%'
                requested_server_name: '%REQUESTED_SERVER_NAME%'
                response_code: '%RESPONSE_CODE%'
                response_flags: '%RESPONSE_FLAGS%'
                route_name: '%ROUTE_NAME%'
                start_time: '%START_TIME%'
                upstream_cluster: '%UPSTREAM_CLUSTER%'
                upstream_failure_reason: '%UPSTREAM_TRANSPORT_FAILURE_REASON%'
                upstream_host: '%UPSTREAM_HOST%'
                upstream_local_address: '%UPSTREAM_LOCAL_ADDRESS%'
                upstream_service_time: '%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%'
                user_agent: '%REQ(USER-AGENT)%'
                x_forwarded_for: '%REQ(X-FORWARDED-FOR)%'
                x_zendesk_original_host: '%REQ(X-ZENDESK-ORIGINAL-HOST)%'
